Finally, javafx properly added to the project >_>