@@ -1,5 +1,8 @@
 import backend.Partie;
 
+// --module-path "./javafx/lib" --add-modules javafx.controls,javafx.fxml
+// Dans run / edit configuration / edit vm truc
+
 public class main {
     public static void main(String [] args){
 
